<resources>
    <string name="app_name">Nawe</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="nav_home">home</string>
    <string name="nav_map">map</string>
    <string name="nav_pulsera">pulsera</string>
    <string name="nav_ayuda">ayuda</string>
    <string name="nav_perfil">perfil</string>
</resources>
