<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/IdHomeNav"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/IdMapNav"
        android:icon="@drawable/baseline_map_black_24dp"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/IdPulseraNav"
        android:icon="@drawable/bangle"
        android:title="@string/nav_pulsera" />
    <item
        android:id="@+id/IdAyudaNav"
        android:icon="@drawable/information"
        android:title="@string/nav_ayuda" />
    <item
        android:id="@+id/IdPerfilNav"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/nav_perfil" />
</menu>